--- a/content/sections/projects/projects.json
+++ b/content/sections/projects/projects.json
@@ -9,13 +9,9 @@
       "image": {
         "src": "../../images/clement-h-95YRwf6CNw8-unsplash.jpg",
         "alt": "Quick Setup",
-        "linkTo": "https://github.com/konstantinmuenster/gatsby-starter-portfolio-minimal-theme"
+        "linkTo": "/my-first-article"
       },
       "links": [
-        {
-          "type": "github",
-          "url": "https://github.com/konstantinmuenster/gatsby-starter-portfolio-minimal-theme"
-        },
         {
           "type": "external",
           "url": "https://www.gatsbyjs.org/docs/mdx/writing-pages/"
@@ -34,7 +30,7 @@
       },
       "links": [
         {
-          "type": "github",
+          "type": "external",
           "url": "https://github.com/konstantinmuenster/gatsby-starter-portfolio-minimal-theme"
         }
       ]
@@ -43,6 +39,6 @@
   "button": {
     "visible": true,
     "label": "Visit on Github",
-    "url": "https://github.com/konstantinmuenster/gatsby-theme-portfolio-minimal"
+    "url": "https://github.com/sebastian-contreras"
   }
 }
