--- a/content/settings.json
+++ b/content/settings.json
@@ -1,29 +1,27 @@
 {
   "siteMetadata": {
-    "language": "en",
+    "language": "es",
     "siteUrl": "https://gatsby-starter-portfolio-minimal-theme.netlify.app/",
-    "title": "Gatsby Starter for Portfolio Minimal",
-    "titleTemplate": "%s · Portfolio Minimal",
-    "description": "A Gatsby Starter Project to easily get started with Portfolio Minimal theme.",
-    "author": "Konstantin Münster",
+    "title": "Portafolio de desarrollador de Sebastian Contreras",
+    "titleTemplate": "%s · Sebastian Contreras",
+    "description": "Portafolio de desarrollador de Sebastian Contreras, estudiante de ingenieria en computacion",
+    "author": "Sebastian Contreras",
     "avatar": "../content/images/gatsby.png",
-    "bio": "This biography will be used in the footer area of an article and can contain some more details about the author.",
+    "bio": "Estudiante de ingenieria en computacion de la facultad de ciencias exactas y tecnologia de la provincia de Tucuman",
     "social": {
-      "behance": "https://behance.com",
-      "github": "https://github.com/konstantinmuenster",
-      "medium": "https://konstantinmuenster.medium.com",
-      "linkedin": "https://www.linkedin.com/in/konstantin-muenster/",
-      "mail": "mailto:mail@konstantin.digital"
+      "github": "https://github.com/sebastian-contreras/",
+      "linkedin": "https://linkedin.com/sebastian-contreras/",
+      "mail": "mailto:sebasfac2017@gmail.com"
     }
   },
   "siteConfiguration": {
-    "logo": { "text": "Portfolio" },
+    "logo": { "text": "Sebastian Contreras" },
     "navigation": {
       "header": [
-        { "label": "About", "url": "/#about" },
-        { "label": "Blog", "url": "/blog" },
+        { "label": "Sobre mi", "url": "/#about" },
+        { "label": "Proyectos", "url": "/proyectos" },
         { "label": "Features", "url": "/#features" },
-        { "label": "Github", "url": "/#github" }
+        { "label": "Contacto", "url": "/#github" }
       ],
       "ctaButton": {
         "openNewTab": true,
