--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "gatsby": "^5.0.1",
+    "gatsby": "^5.12.6",
+    "gatsby-cli": "^5.12.2",
     "gatsby-theme-portfolio-minimal": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
