--- a/content/settings.json
+++ b/content/settings.json
@@ -25,7 +25,7 @@
       "ctaButton": {
         "openNewTab": true,
         "label": "Curriculum Vitae",
-        "url": "/resume.pdf"
+        "url": "/41950654-SebastianContreras.pdf"
       },
       "footer": [
         { "label": "Privacy", "url": "/privacy" },
